--- a/people/index.html
+++ b/people/index.html
@@ -2,260 +2,103 @@
 layout: page
 title:  "People and Groups"
 ---
-<!-- clubs -->
+{% assign data = site.data.people-and-groups %}
+
+<!-- staff -->
+{% for type in data.staff %}
 <div class="pure-g">
     <div class="pure-u-1">
-        <h2>Staff</h2>
+        <h2>{{ type.name }}</h2>
     </div>
 </div>
 <div class="pure-g">
+  {% for person in type.people %}
     <div class="pure-u-1 pure-u-md-1-3">
         <div class="card">
-            <h3>Ian Roy</h3>
-            <p>
-                Assistant Director for Research Technology and Innovation
-                Head of Brandeis MakerLab
-                Staff Advisor to 3D Printing Club, Deis3D.org
-                Hardware Advisor to BITMAP
-                Class of '05
-            </p>
-            <h4>Contact</h4>
-                <ul>
-                    <li>
-                        <a href="mailto:ianroy@brandeis.edu">Email</a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/ianiscray_/">Instagram</a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/ianiscray">Twitter</a>
-                    </li>
-                    <li>
-                        (781) 736-4608
-                    </li>
-                </ul>
+            <h3>{{ person.name }}</h3>
+            <p> {{ person.description }} </p>
+            {% if person.contact || person.phone %}
+              <h4>Contact</h4>
+              <ul>
+                {% for type in person.contact %}
+                  <li>
+                      <a href="{{ type.link }}">{{ type.name }}</a>
+                  </li>
+                {% endfor %}
+                {% if person.phone %}
+                  <li>
+                      {{ person.phone }}
+                  </li>
+                {% endif %}
+              </ul>
+            {% endif %}
         </div>
     </div>
-    <div class="pure-u-1 pure-u-md-1-3">
-        <div class="card">
-            <h3>Hazal Uzunkaya</h3>
-            <p>Brandeis University LTS
-                Research Technology Specialist
-                Service Coordinator of Brandeis MakerLab
-            </p>
-            <h4>Contact</h4>
-                <ul>
-                    <li>
-                        <a href="mailto:hazalu@brandeis.edu">Email</a>
-                    </li>
-                </ul>
-            </h4>
-        </div>
-    </div>
-    <div class="pure-u-1 pure-u-md-1-3">
-        <div class="card">
-            <h3>Tim Hebert</h3>
-            <p>Media Technology Systems Administrator, Media Technology Services
-                Embedded Systems Consultant, Brandeis MakerLab
-            </p>
-            <h4>Contact</h4>
-                <ul>
-                    <li>
-                        <a href="mailto:thebert@brandeis.edu">Email</a>
-                    </li>
-                    <li>
-                        (781) 736-4603
-                    </li>
-                </ul>
-        </div>
-    </div>
+    {% endfor %}
 </div>
+{% endfor %}
 
 <hr>
 
+{% for type in data.clubs %}
 <div class="pure-g">
     <div class="pure-u-1">
-        <h2>Clubs</h2>
+        <h2>{{ type.name }}</h2>
     </div>
 </div>
 <div class="pure-g">
+  {% for club in type.clubs %}
     <div class="pure-u-1 pure-u-md-1-2">
         <div class="card">
-            <h3>BITMAP</h3>
-                <p>The original Brandeis umbrella technology club - Brandeis Initiative for Technology, Machines, Apps, and Programming - and organizers of Codestellation, Brandeis' biggest software and hardware hackathon.</p>
+            <h3>{{ club.name }}</h3>
+                <p>{{ club.description }}</p>
+            {% if club.links %}
             <h4>Links</h4>
                 <ul>
-                    <li><a href="https://www.facebook.com/groups/429460677107670/" target="_blank">Facebook group</a></li>
-                    <li><a href="http://codestellation.io" target="_blank">Codestellation (hackathon) website</a></li>
-                    <li><a href="https://twitter.com/Codestellation" target="_blank">Codestellation twitter</a></li>
+                  {% for link in club.links %}
+                    <li><a href="{{ link.link }}" target="_blank">{{ link.name }}</a></li>
+                  {% endfor %}
                 </ul>
+            {% endif %}
+            {% if club.contact %}
             <h4>Contact Info</h4>
                 <ul>
-                    <li><a href="mailto:taliem@brandeis.edu">Talie</a></li>
+                    <li><a href="{{ club.contact.email }}">{{ club.contact.name }}</a></li>
                 </ul>
+            {% endif %}
         </div>
     </div>
-    <div class="pure-u-1 pure-u-md-1-2">
-        <div class="card">
-            <h3>Deis 3D</h3>
-                <p>Brandeis 3D Printing Club</p>
-            <h4>Links</h4>
-                <ul>
-                    <li><a href="http://deis3d.org" target="_blank">Website</a></li>
-                    <li><a href="https://www.facebook.com/deis3d" target="_blank">Facebook page</a></li>
-                    <li><a href="http://printathon.org/" target="_blank">Printathon website</a></li>
-                </ul>
-            <h4>Contact</h4>
-                <ul>
-                    <li><a href="mailto:gabeseltzer@gmail.com">Gabe</a></li>
-                </ul>
-        </div>
-    </div>
-</div>
-<div class="pure-g">
-    <div class="pure-u-1 pure-u-md-1-2">
-        <div class="card">
-            <h3>Virtual Reality Club</h3>
-                <!-- <img class="pure-img" src="/assets/images/vr.png"> -->
-                <p>Chartered in Fall 2015, by undergraduate students Mike Makivic and Daniella Dimitrova, the VR club is a very active Unity and Unreal development group that seeks to combine the latest VR hardware technologies with the latest VR software toolsets.  They have assisted in projects to build virtual copies of the Rose Art Museum, the House of Verratti in Pompeii, ancient object galleries for the Classics department, virtual simulations for advanced research labs including the Graybiel Lab, and have introduced a generation of Brandeis students to the possibilities of head mounted display-based VR.</p>
-            <h4>Contact</h4>
-                <ul>
-                    <li><a href="mailto:mikemakivic@gmail.com">Mike</a></li>
-                </ul>
-        </div>
-    </div>
-    <div class="pure-u-1 pure-u-md-1-2">
-        <div class="card">
-            <h3>Prosthetics Club</h3>
-                <!-- <img class="pure-img" src="/assets/images/prosthetics.png"> -->
-                <p>Chartered in Spring 2014, by undergraduate students Liz Washington and David Landesman, the Prosthetics Club standardized around the E-Nable prosthetic hand platform, an entirely 3D-printed prosthetic hand that can be assembled for under $50 and is competitive with a $20k traditional prosthetic, and can be custom-fit to the individual, particularly children.  The club does a lot of outreach doing activities with physically disabled children, as well as learning how to build prosthetics and thinking about ways to improve the open source platform.  This semester they are branching from physical lever-based prosthetics into true neurosensor and motor-based bionics with the help of the Neuroscience Club.</p>
-            <h4>Contact</h4>
-                <ul>
-                    <li><a href="mailto:dlandesm@brandeis.edu">David</a></li>
-                </ul>
-        </div>
-    </div>
-</div>
-<div class="pure-g">
-    <div class="pure-u-1 pure-u-md-1-2">
-        <div class="card">
-            <h3>Aviation Club</h3>
-                <!-- <img class="pure-img" src="/assets/images/aviation.png"> -->
-                <p>Once a club for airplane enthusiasts (people who fly manned gliders) the Aviation Club has been resurrected with a focus on unmanned aerial systems, colloquially referred to as “drones”.  Under the leadership of undergraduate students Kiana Jane and Bronson Gardner, the club is working to get their charter paperwork through in the Fall 2016 semester with the aim of hosting the first East Coast intercollegiate drone races in Spring 2017.   These first races will be based on a sub-50-gram, sub-25-milliwatt, race platform which requires no registration with the FAA, FCC, or any other aviation government agencies. The goal would be to hold small-scale races on a tennis court-sized venue, against other schools developing similar racing programs.  The value of this in the convergence of technologies, from 3D printing to virtual reality to embedded systems to signals to soldering. Nearly the entire Maker toolset can be used in a single project, which makes drone racing a valuable cross-training tool for any type of R+D.  The goal here is similar to First Robotics.  Why don’t we have science teams competing like sports teams, where at the end of the season everyone at the end of the team can go pro?</p>
-        </div>
-    </div>
-    <div class="pure-u-1 pure-u-md-1-2">
-        <div class="card">
-            <h3>Robotics Club</h3>
-                <p>Chartering in Fall 2016, the Robotics Club aims to teach robotics platforms and concepts to the Brandeis community and compete in robot competitions such as BattleBots and similar events held locally at Artisans Asylum.</p>
-            <h4>Links</h4>
-                <ul>
-                    <li><a href="http://www.battlebots.com/ " target="_blank">BattleBots</a></li>
-                    <li><a href="https://artisansasylum.com/massdestruction/" target="_blank">Artisans Asylum - Mass Destruction</a></li>
-                </ul>
-        </div>
-    </div>
+  {% endfor %}
+{% endfor %}
 </div>
 
 <hr>
 
+{% for type in data.student-workers %}
 <div class="pure-g">
     <div class="pure-u-1">
-        <h2>Student Workers</h2>
+        <h2>{{ type.name }}</h2>
     </div>
 </div>
 <div class="pure-g">
+  {% for student in type.students %}
     <div class="pure-u-1 pure-u-md-1-3">
         <div class="card">
-            <h3>Julie</h3>
-            <p>
-                Julie Anne Ruiz is aiming for a BA in History (Honors) and East Asian Studies. At the MakerLab, she specializes in Emerging Technology and Innovation. This includes 3D printing, 3D scanning (Skanect and Artec), and VR equipment. Julie loves learning and being involved in everything. Talk to her when you walk into the MakerLab (especially if you are interested in DeisVR).
-            </p>
+            <h3>{{ student.name }}</h3>
+            <p> {{ student.description}} </p>
             <h4>Contact</h4>
                 <ul>
+                  {% for link in student.contact %}
                     <li>
-                        <a href="mailto:jr1470@brandeis.edu">Email</a>
+                        <a href="{{ link.link }}">{{ link.name }}</a>
                     </li>
-                    <li>
-                        <a href="http://julieanneruiz.com" target="_blank">Website</a>
-                    </li>
-                    <li>
-                        <a href="https://linkedin.com/in/julieanneruiz" target="_blank">LinkedIn</a>
-                    </li>
+                  {% endfor %}
                 </ul>
         </div>
     </div>
-    <div class="pure-u-1 pure-u-md-1-3">
-        <div class="card">
-            <h3>Danny</h3>
-            <p>Danny is a senior majoring in Health: Science, Society, and Policy & Computer Science. His areas of focus at the MakerLab are 3D printing, 3D modeling, and 3D scanning.
-            </p>
-            <h4>Contact</h4>
-                <ul>
-                    <li>
-                        <a href="https://linkedin.com/in/danielkimmel" target="_blank">LinkedIn</a>
-                    </li>
-                </ul>
-            </h4>
-        </div>
-    </div>
-    <div class="pure-u-1 pure-u-md-1-3">
-        <div class="card">
-            <h3>John</h3>
-            <p>John maintains and configures the custom PC’s in the Makerlab and makes sure everything isn’t broken. He likes to configure and play with VR systems as well. He enjoys science, education, and technology. He would like to go to medical school, and is a BS/MS Biology Candidate at Brandeis.
-            </p>
-            <h4>Contact</h4>
-                <ul>
-                    <li>
-                        <a href="mailto:jdeng@brandeis.edu">Email</a>
-                    </li>
-                    <li>
-                        <a href=" https://www.linkedin.com/in/john-deng-4546b284" target="_blank">LinkedIn</a>
-                    </li>
-                </ul>
-        </div>
-    </div>
-    <div class="pure-g">
-        <div class="pure-u-1 pure-u-md-1-3">
-            <div class="card">
-                <h3>Youssef</h3>
-                <p>Youssef is a sophomore majoring in physics with a minor in math. He is planning on participating in the Columbia University 3-2 Engineering Program. At the MakerLab, Youssef CADs in SolidWorks, repairs printers, helps others, and prints whenever possible.
-                </p>
-                <h4>Contact</h4>
-                    <ul>
-                        <li>
-                            <a href="mailto:yfahmy98@brandeis.com">Email</a>
-                        </li>
-                        <li>
-                            <a href="  https://www.linkedin.com/in/youssef-fahmy-018a73126?trk=hp-identity-photo" target="_blank">LinkedIn</a>
-                        </li>
-                    </ul>
-            </div>
-        </div>
-        <div class="pure-u-1 pure-u-md-1-3">
-            <div class="card">
-                <h3>Sofiya</h3>
-                <p>Sofiya, queen of code, is a senior majoring in computer science and minoring in physics. At the MakerLab, her area of expertise is web development, branding, design. She is the foremost expert on colors and shapes. Come to her with any questions about programming and design.
-                </p>
-                <h4>Contact</h4>
-                    <ul>
-                        <li>
-                            <a href="mailto:sofiya@brandeis.edu">Email</a>
-                        </li>
-                        <li>
-                            <a href="http://sofiya.io/" target="_blank">Website</a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/novasofiya" target="_blank">LinkedIn</a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/novasofiya" target="_blank">Twitter</a>
-                        </li>
-                    </ul>
-            </div>
-        </div>
-    </div>
+  {% endfor %}
 </div>
+{% endfor %}
 
 <!-- <hr>
 
