--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@ title: ""
 <div class="pure-g">
 	<div class="pure-u-1 section" id="get-involved">
 		<h2>Get Involved!</h2>
-			<p>Brandeis MakerLab is a free-of-charge service open to the entire Brandeis community, located in the Farber Library Mezzanine, open during <a href="https://lts.brandeis.edu/location/hours/mainlibrary.html" target="_blank">library operating hours</a>. Stop by and check us out!
+			<p>Brandeis MakerLab is a free-of-charge service open to the entire Brandeis community. Visit us in the Farber Library Mezzanine during <a href="https://lts.brandeis.edu/location/hours/mainlibrary.html" target="_blank">library operating hours</a>!
 			</p>
 		<div class="pure-g">
 			<div class="pure-u-1 pure-u-lg-1-5">
 				<div class="bg-text" data-bg-text="1">
-					<h3><a href="/people">Join a club</a>
+					<h3><a href="/people/#clubs">Join a club</a>
 					</h3>
 				</div>
 			</div>
 			<div class="pure-u-1 pure-u-lg-1-5">
 				<div class="bg-text" data-bg-text="2">
-					<h3><a href="/mir">Become a Maker in Residence</a></h3>
+					<h3><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeb6WW3rmtUI_24k5Pdbe6vxmp0ni8UYKsk-yrJASJTjNCLeA/viewform?usp=sf_link">Become a Maker in Residence</a></h3>
 				</div>
 			</div>
 			<div class="pure-u-1 pure-u-lg-1-5">
 				<div class="bg-text" data-bg-text="3">
-					<h3><a href="/resources">Use the lab for individual research and projects</a></h3>
+					<h3><a href="/services">Use lab services</a></h3>
 				</div>
 			</div>
 			<div class="pure-u-1 pure-u-lg-1-5">
@@ -58,9 +58,9 @@ title: ""
 		<h2>What we do</h2>
 		<div class="features">
 			<section class="quadrant">
-				<span class="icon major fa-gear"></span>
+				<span class="icon major fa-pencil"></span>
 				<h3>Teaching & Learning</h3>
-				<p>Curricular lectures in emerging technology, <a href="/training">weekly trainings</a>, and <a href="https://sites.google.com/a/brandeis.edu/brandeis-makerlab-calendar/">workshops</a>.</p>
+				<p>Curricular lectures in emerging technology, <a href="/training">weekly trainings, and workshops</a>.</p>
 			</section>
 			<section class="quadrant">
 				<span class="icon major fa-mortar-board"></span>
@@ -70,11 +70,11 @@ title: ""
 			<section class="quadrant">
 				<span class="icon major fa-calendar"></span>
 				<h3>Hackathons & Events</h3>
-				<p>24 hour programming challenges and prototyping challenges, <a href="https://sites.google.com/a/brandeis.edu/brandeis-makerlab-calendar/">speaker series</a>, and sponsored maker in residence projects.</p>
+				<p>24 hour programming challenges and prototyping challenges, <a href="/news">talks</a>, and sponsored maker in residence projects.</p>
 			</section>
 			<section class="quadrant">
 				<span class="icon major fa-child"></span>
-				<h3>Outreach</h3>
+				<h3><a href="/news">Outreach</a></h3>
 				<p>Talks, tours, and building community.</p>
 			</section>
 		</div>
