--- a/people/index.html
+++ b/people/index.html
@@ -16,7 +16,9 @@ title:  "People and Groups"
     <div class="pure-u-1 pure-u-md-1-3">
         <div class="card">
             <h3>{{ person.name }}</h3>
-            <p> {{ person.description }} </p>
+            {% for job in person.description %}
+            <li> {{job.title}} </li>
+            {% endfor %}
             {% if person.contact || person.phone %}
               <h4>Contact</h4>
               <ul>
