--- a/people/index.html
+++ b/people/index.html
@@ -102,10 +102,15 @@ title:  "People and Groups"
 </div>
 {% endfor %}
 
-<!-- <hr>
+<hr>
 
 <div class="pure-g">
     <div class="pure-u-1">
         <h2>Community</h2>
+        <div class="pure-g">
+          <div class="pure-u-1 dcd">
+              <a title="DCD" href="https://www.deepcoredata.com/" target="_blank"><img src="/assets/images/Deep-Core-Data-Logo.png" style="padding-bottom:10px;"></a>
+          </div>
+        </div>
     </div>
-</div> -->
+</div>
